--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -7,5 +7,6 @@ html
     = stylesheet_link_tag 'devise', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
-  body
+  body#devise
+    = render 'devise/navbar'
     = yield
