--- a/app/views/administration/user_settings/shared/_side_menu.html.slim
+++ b/app/views/administration/user_settings/shared/_side_menu.html.slim
@@ -1,3 +1,8 @@
 .side-menu
   ul.nav.navbar-nav
-    li.active = link_to 'Edit', edit_administration_user_settings_users_path
+    li = link_to [:edit, :administration, :user_settings, current_user] do
+      = fa_icon 'user', class: 'fa-lg'
+      | &nbsp &nbsp
+      = 'User Settings'
+  ul.nav.navbar-nav
+    li.active = link_to 'Edit', [:edit, :administration, :user_settings, current_user]
