--- a/app/assets/stylesheets/administration/side_menu.sass
+++ b/app/assets/stylesheets/administration/side_menu.sass
@@ -1,8 +1,8 @@
 .side-menu
   padding-top: 38px
-  position: fixed
-  width: 300px
-  height: 100%
+  min-width: 300px
+  max-width: 300px
+  height: 100vh
   background-color: #f8f8f8
   border-right: 1px solid #e7e7e7
 
@@ -32,6 +32,9 @@
       margin-right: -1px
       border-left: 5px solid $main-color
 
+.wraper
+  display: flex
+  align-items: stretch
+
 .side-body
   padding-top: 60px
-  margin-left: 310px
