--- a/app/views/administration/shared/_navbar.html.slim
+++ b/app/views/administration/shared/_navbar.html.slim
@@ -1,7 +1,14 @@
 nav.navbar.navbar-expand-sm.navbar-dark.fixed-top
-  .mr-auto
-    = link_to administration_root_path
-      = image_tag 'logo.png', id: 'logo', size: 24
+  = link_to administration_root_path
+    = image_tag 'logo.png', id: 'logo', height: 21, width: 40
+
+  ul.navbar-nav.mr-auto.ml-4
+    li.nav-item class=('active' if request.url.include?('projects'))
+      = link_to 'Projects', administration_projects_path, class: 'nav-link small'
+    li.nav-item class=('active' if request.url.include?('department'))
+      = link_to 'Departments', administration_departments_path, class: 'nav-link small'
+      li.nav-item class=('active' if request.url.include?('wiki'))
+        = link_to 'Wiki', administration_wiki_root_path, class: 'nav-link small'
 
   ul.navbar-nav
      a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
@@ -9,7 +16,7 @@ nav.navbar.navbar-expand-sm.navbar-dark.fixed-top
      .dropdown-menu.dropdown-menu-right
        a class="dropdown-item"
          = current_user
-       = link_to [:edit, :administration, :user_settings, current_user], class: 'dropdown-item'
+       = link_to [:edit, :administration, current_user], class: 'dropdown-item'
          = 'Settings'
        div class="dropdown-divider">
        = link_to destroy_user_session_path, method: :delete, class: 'dropdown-item'
