--- a/app/views/administration/shared/_side_menu.html.slim
+++ b/app/views/administration/shared/_side_menu.html.slim
@@ -1,3 +1,7 @@
 .side-menu
   ul.nav.navbar-nav
-    li.active = link_to 'Dashboard', administration_root_path
+    li class=('active' if current_page?(controller: :dashboards, action: :show))
+      = link_to 'Dashboard', administration_root_path
+  ul.nav.navbar-nav
+    li class=('active' if request.url.include?('board'))
+      = link_to 'Issue board', administration_board_path
