add basic vue stuff

--- a/app/assets/stylesheets/administration.sass
+++ b/app/assets/stylesheets/administration.sass
@@ -1,4 +1,5 @@
 @import base
+@import administration/variables 
 @import administration/side_menu
 @import administration/navbar
 @import administration/list
