--- a/app/views/administration/shared/_side_menu.html.slim
+++ b/app/views/administration/shared/_side_menu.html.slim
@@ -4,4 +4,4 @@
       = link_to 'Dashboard', administration_root_path
   ul.nav.navbar-nav
     li class=('active' if request.url.include?('board'))
-      = link_to 'Issue board', administration_board_path
+      = link_to 'Issues', administration_board_path
