--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -4,15 +4,21 @@ html
     title TemplateProject
     = csrf_meta_tags
 
+
+
     = stylesheet_link_tag 'administration', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
+    = javascript_pack_tag 'application'
+    = stylesheet_pack_tag 'application'
+
   body
-    = render 'administration/shared/navbar'
-    .wraper
-      - if content_for? :side_menu
-        = :side_menu
-      - else
-        = render @side_menu_path
-      section.side-body.container-fluid
-        = yield
+    #app
+      = render 'administration/shared/navbar'
+      .wraper
+        - if content_for? :side_menu
+          = :side_menu
+        - else
+          = render @side_menu_path
+        section#side-body.container-fluid
+          = yield
