--- a/app/assets/stylesheets/administration/side_menu.sass
+++ b/app/assets/stylesheets/administration/side_menu.sass
@@ -1,10 +1,10 @@
 .side-menu
   padding-top: 38px
-  min-width: 300px
-  max-width: 300px
+  min-width: $side-menu-width
+  max-width: $side-menu-width
   height: 100vh
   background-color: #f8f8f8
-  border-right: 1px solid #e7e7e7
+  border-right: 2px solid #e7e7e7
 
   .navbar
     border: none
@@ -36,5 +36,9 @@
   display: flex
   align-items: stretch
 
-.side-body
+#side-body
   padding-top: 60px
+  position: fixed
+  margin-left: $side-menu-width
+  height: calc(100vh - 38px)
+  max-width: calc(100% - #{$side-menu-width})
