--- a/app/concepts/administration/issue/view/form.slim
+++ b/app/concepts/administration/issue/view/form.slim
@@ -1,4 +1,4 @@
-= simple_form_for [:administration, model] do |f|
+= simple_form_for [:administration, model.board_list, model] do |f|
   .row
     .col-lg-12
       = f.input :title, required: false
