--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -7,6 +7,9 @@ html
     = stylesheet_link_tag 'devise', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
+    = javascript_pack_tag 'application'
+    = stylesheet_pack_tag 'application'
+
   body#devise
     = render 'devise/navbar'
     = yield
