feature(records): imrove start, stop records
- add asside section with relevant issues, search and time recorder
- add the logic to make active record unique

--- a/app/assets/stylesheets/administration/side_menu.sass
+++ b/app/assets/stylesheets/administration/side_menu.sass
@@ -5,6 +5,7 @@
   height: 100vh
   background-color: #f8f8f8
   border-right: 2px solid #e7e7e7
+  position: relative
 
   .navbar
     border: none
@@ -31,6 +32,11 @@
       background-color: transparent
       margin-right: -1px
       border-left: 5px solid $main-color
+
+  .shared-secton
+    position: absolute
+    bottom: 0
+    width: 100%
 
 .wraper
   display: flex
