--- a/app/views/administration/shared/_side_menu.html.slim
+++ b/app/views/administration/shared/_side_menu.html.slim
@@ -5,3 +5,5 @@
   ul.nav.navbar-nav
     li class=('active' if request.url.include?('board'))
       = link_to 'Issues', administration_board_path
+  ul.nav.navbar-nav.shared-secton
+    shared-issue-section
