feature(tests, layout): add integration tests, add flash messages
- Integration tests: add them using selenium as docker und capybara
- Unity tests: add more vue tests
- Flash message: normal rails with bootsrap alerts with some sall css
  changes

--- a/app/assets/stylesheets/administration.sass
+++ b/app/assets/stylesheets/administration.sass
@@ -5,3 +5,4 @@
 @import administration/list
 @import administration/tui_editor_contents
 @import administration/tui_editor
+@import administration/flash_messages
