feat(api): add support for destroy issues
The btn for destroy was allready avaiable on
the vue.js part but without this it was not abble
to work

--- a/app/concepts/administration/records/view/index.slim
+++ b/app/concepts/administration/records/view/index.slim
@@ -16,7 +16,7 @@ br
               .pull-right = spended_time(records)
           - records.each do |record|
             tr
-              td = record.issue.title
+              td = record.issue&.title
               td = l(record.start_time, format: "%I:%M %P")
               td = l(record.end_time, format: "%I:%M %P")
               td
