feat(api, vue.js): issues complexity support, minor conifg changes
- add complexity select box with the purpose
  to make later estimations
- some cleanup

--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 html
   head
-    title TemplateProject
+    title CMC
     = csrf_meta_tags
 
     <link rel="stylesheet" href="https://nhnent.github.io/tui.editor/api/latest/lib/codemirror/lib/codemirror.css">
