--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 html
   head
-    title TemplateProject
+    title CMC
     = csrf_meta_tags
 
     = stylesheet_link_tag 'devise', media: 'all', 'data-turbolinks-track': 'reload'
