--- a/app/concepts/administration/board_list/view/form.slim
+++ b/app/concepts/administration/board_list/view/form.slim
@@ -2,6 +2,7 @@
   .row
     .col-lg-12
       = f.input :name, required: false
+      = f.input :project_id, collection: project_collection
 
   .row
     .col-lg-12
