--- a/app/concepts/administration/board_list/view/form.slim
+++ b/app/concepts/administration/board_list/view/form.slim
@@ -1,4 +1,4 @@
-= simple_form_for [:administration, model] do |f|
+= simple_form_for [:administration, model], as: :data do |f|
   .row
     .col-lg-12
       = f.input :name, required: false
