feat(mvc): fix edit profile, add more tests
- edit user was broken
- api acceptance tests was missing

--- a/app/concepts/administration/users/view/form.slim
+++ b/app/concepts/administration/users/view/form.slim
@@ -1,4 +1,4 @@
-= simple_form_for [:administration, :user_settings, model] do |f|
+= simple_form_for [:administration, model], as: :data do |f|
 
   .row
     .col-md-6
