--- a/app/views/administration/users/shared/_side_menu.html.slim
+++ b/app/views/administration/users/shared/_side_menu.html.slim
@@ -1,8 +1,8 @@
 .side-menu
   ul.nav.navbar-nav
-    li = link_to [:edit, :administration, :user_settings, current_user] do
+    li = link_to [:edit, :administration, current_user] do
       = fa_icon 'user', class: 'fa-lg'
       | &nbsp &nbsp
       = 'User Settings'
   ul.nav.navbar-nav
-    li.active = link_to 'Edit', [:edit, :administration, :user_settings, current_user]
+    li.active = link_to 'Edit', [:edit, :administration, current_user]
