--- a/app/concepts/administration/records/view/index.slim
+++ b/app/concepts/administration/records/view/index.slim
@@ -16,7 +16,7 @@ br
               .pull-right = spended_time(records)
           - records.each do |record|
             tr
-              td = record.issue&.title
+              td = record.description
               td = l(record.start_time, format: "%I:%M %P")
               td = l(record.end_time, format: "%I:%M %P")
               td
