feat(mvc): add spendet time/project to dashboard
why?: all information for this are avaiable and
it will allow to see what project was spent to much
or to less time

--- a/app/concepts/administration/dashboard/view/show.slim
+++ b/app/concepts/administration/dashboard/view/show.slim
@@ -1,1 +1,10 @@
-b-button dsfsd
+.table-resposive
+  table.table
+    thead
+      th scope="col" Project
+      th scope="col" Spendet time
+    tbody
+      - model[:projects].each do |project, spended_time|
+        tr
+          td = project.name
+          td = seconds_to_time(spended_time)
