fix(sidebar,gitignore): some bugfixes
fix:
* add database.yml to gitignore
* sidebar issues overlap (typo)

--- a/app/views/administration/shared/_side_menu.html.slim
+++ b/app/views/administration/shared/_side_menu.html.slim
@@ -7,5 +7,5 @@
       = link_to 'Records', administration_records_path
     li class=('active' if request.url.include?('board'))
       = link_to 'Issues', administration_board_path
-  ul.nav.navbar-nav.shared-secton
+  ul.nav.navbar-nav.shared-section
     shared-issue-section
