fix(spelling,missing menu item): layout fixes
fixes:
* spelling of month, spended
* add category time tracking as it is not obvious where to find

--- a/app/concepts/administration/dashboard/view/show.slim
+++ b/app/concepts/administration/dashboard/view/show.slim
@@ -2,7 +2,7 @@
   table.table
     thead
       th scope="col" Project
-      th scope="col" Spendet time
+      th scope="col" Spended time
     tbody
       - model[:projects].each do |project, spended_time|
         tr
