--- a/app/concepts/administration/records/view/index.slim
+++ b/app/concepts/administration/records/view/index.slim
@@ -1,6 +1,6 @@
 .row.align-items-center
   .col-sm-6.font-weight-bold
-    | You have worked #{month_spendet_time} hours this month
+    | You have worked #{month_spended_time} hours this month
   .col-sm-6
     .pull-right = add_link
 br
