fix(css): typ error shared-secton -> shared-section
after fix the spell on the other part of the app
there was a render error bacause of inconsistentnce

--- a/app/assets/stylesheets/administration/side_menu.sass
+++ b/app/assets/stylesheets/administration/side_menu.sass
@@ -33,7 +33,7 @@
       margin-right: -1px
       border-left: 5px solid $main-color
 
-  .shared-secton
+  .shared-section
     position: absolute
     bottom: 0
     width: 100%
