--- a/app/concepts/administration/users/view/form.slim
+++ b/app/concepts/administration/users/view/form.slim
@@ -1,32 +1,10 @@
 = simple_form_for [:administration, model], as: :data do |f|
 
-  .row
-    .col-md-6
-      h5 = 'Avatar'
-      | This information will appear on your profile.
+  = f.input :firstname
+  = f.input :lastname
+  = f.input :email
+  = f.input :password, as: :password
+  = f.input :password_confirmation, as: :password
 
-  hr.divider
-
-  .row
-    .col-lg-6
-      h5 = 'Main settings'
-      | This information will appear on your profile.
-    .col-lg-6
-      = f.input :firstname, required: false
-      = f.input :lastname, required: false
-      = f.input :email, required: false
-
-  hr.divider
-
-  .row
-    .col-lg-6
-      h5 = 'Contact data'
-      | This information will appear on your profile.
-
-  br
-
-  .row
-    .col-lg-6
-    .col-lg-6
-      = f.submit class: 'btn btn-success'
-      = link_to 'Cancel', cancel_path, class: 'btn btn-secondary pull-right'
+  = f.submit class: 'btn btn-success'
+  = link_to 'Cancel', cancel_path, class: 'btn btn-secondary pull-right'
