--- a/app/concepts/administration/board_lists/view/form.slim
+++ b/app/concepts/administration/board_lists/view/form.slim
@@ -7,4 +7,4 @@
   .row
     .col-lg-12
       = f.submit class: 'btn btn-success'
-      = link_to 'Cancel', cancel_path, class: 'btn btn-secondary pull-right'
+      .pull-right = cancel_btn
