--- a/app/concepts/administration/records/view/form.slim
+++ b/app/concepts/administration/records/view/form.slim
@@ -2,8 +2,8 @@
   .row
     .col-lg-12
       = f.input :issue_id, collection: issues_collection
-      = f.input :start_time
-      = f.input :end_time
+      = f.input :start_time, as: :date_time 
+      = f.input :end_time, as: :date_time
 
   .row
     .col-lg-12
