--- a/app/concepts/administration/wiki_categories/view/form.slim
+++ b/app/concepts/administration/wiki_categories/view/form.slim
@@ -2,10 +2,9 @@
   .row
     .col-lg-12
       = f.input :title
-      = f.input :wiki_category_id, collection: categories_collection,
+      = f.input :wiki_category_id, collection: WikiCategory.all,
                 required: false
 
   .row
     .col-lg-12
-      = f.submit class: 'btn btn-success'
-      = cancell_btn
+      = actions(f)
