specs(coverage): add api controller tests
add shared examples for api/v1 and add
controller tests

--- a/app/concepts/administration/wiki_pages/view/form.slim
+++ b/app/concepts/administration/wiki_pages/view/form.slim
@@ -2,9 +2,8 @@
   .row
     .col-lg-12
       = f.input :title
-      = f.input :wiki_category_id, collection: categories_collection
+      = f.input :wiki_category_id, collection: WikiCategory.all
 
   .row
     .col-lg-12
-      = f.submit class: 'btn btn-success'
-      = cancell_btn
+      = actions(f)
