feat(vue): search select on board and projects
What:
Top bar input can now used to search. Befor it was
a useless text input

why:
allow to find fast issues or projects

--- a/app/concepts/administration/projects/view/index.slim
+++ b/app/concepts/administration/projects/view/index.slim
@@ -1,6 +1,6 @@
 .row
   .col-md-8
-    input.form-control placeholder='Search'
+    project-search-select
   .col-md-4
     br.d-md-none
     = new_btn
