feature(mvc, fixes): add time_zone and fix some issues
- add time_zone to organization
- fix create record and redirect url

--- a/app/concepts/registrations/view/form.slim
+++ b/app/concepts/registrations/view/form.slim
@@ -1,6 +1,8 @@
 = simple_form_for model, as: :data do |f|
   #box
     = f.input :name
+    = f.input :time_zone, as: :time_zone
+    br
     br
     = f.input :firstname
     = f.input :lastname
