--- a/app/views/administration/shared/_navbar.html.slim
+++ b/app/views/administration/shared/_navbar.html.slim
@@ -11,6 +11,8 @@ nav.navbar.navbar-expand-sm.navbar-dark.fixed-top
       = link_to 'Archive', administration_archive_root_path, class: 'nav-link small'
     li.nav-item class=('active' if request.url.include?('users'))
       = link_to 'Users', administration_users_path, class: 'nav-link small'
+    li.nav-item class=("active" if request.url.include?("users"))
+      = link_to 'Admin', %i[edit administration organization], class: 'nav-link small'
 
   ul.navbar-nav
      a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
