feature(mvc): add policy to restrict some access permissions
why:
Admin can do things that an employee can not do and
a customer should even do less than an employee

This change addresses the need by:
- Add pundit
- Add customer, employee and admin models
- Adjust operations and views

--- a/app/concepts/administration/users/view/form.slim
+++ b/app/concepts/administration/users/view/form.slim
@@ -3,8 +3,11 @@
   = f.input :firstname
   = f.input :lastname
   = f.input :email
+  = f.input :type, collection: User.descendants
   = f.input :password, as: :password
   = f.input :password_confirmation, as: :password
+  = f.input :project_ids, collection: Project.all,
+            required: false, multiple: true, label: "Projects"
 
   = f.submit class: 'btn btn-success'
   = link_to 'Cancel', cancel_path, class: 'btn btn-secondary pull-right'
