--- a/app/views/administration/settings/shared/_side_menu.html.slim
+++ b/app/views/administration/settings/shared/_side_menu.html.slim
@@ -1,8 +1,8 @@
 .side-menu
   ul.nav.navbar-nav
-    li = link_to [:edit, :administration, :settings, @model] do
+    li = link_to edit_administration_settings_user_path(@model) do
       = fa_icon 'user', class: 'fa-lg'
       | &nbsp &nbsp
       = 'User Settings'
   ul.nav.navbar-nav
-    li.active = link_to 'Edit', [:edit, :administration, :settings, @model]
+    li.active = link_to 'Edit', edit_administration_settings_user_path(@model)
