feature(policies): only show links that the user is allowed to see
why:
showing links to accions to views to what the user has not access
what would cause a crash.

This change addresses the need by:
- add policy(model).method? to some views
- pass current_user via options to the cells

--- a/app/concepts/administration/projects/view/index.slim
+++ b/app/concepts/administration/projects/view/index.slim
@@ -1,9 +1,13 @@
 .row
-  .col-md-8
-    project-search-select
-  .col-md-4
-    br.d-md-none
-    = new_btn
+  - if policy(Project).new?
+    .col-md-8
+      project-search-select
+    .col-md-4
+      br.d-md-none
+      = new_btn
+  - else
+    .col-sm-12
+      project-search-select
 
 br
 br
