--- a/app/views/administration/settings/shared/_side_menu.html.slim
+++ b/app/views/administration/settings/shared/_side_menu.html.slim
@@ -6,3 +6,4 @@
       = 'User Settings'
   ul.nav.navbar-nav
     li.active = link_to 'Edit', edit_administration_settings_user_path(@model)
+  = render "administration/shared/shared_issue_section"
