--- a/app/views/administration/specific_project/shared/_side_menu.html.slim
+++ b/app/views/administration/specific_project/shared/_side_menu.html.slim
@@ -2,3 +2,4 @@
   ul.nav.navbar-nav
     li class=('active' if current_page?(controller: :dashboards, action: :show))
       = link_to 'Dashboard', [:administration, @project, :dashboard]
+  = render "administration/shared/shared_issue_section"
