--- a/app/views/administration/users/shared/_side_menu.html.slim
+++ b/app/views/administration/users/shared/_side_menu.html.slim
@@ -2,3 +2,4 @@
   ul.nav.navbar-nav
     li class=('active' if current_page?(controller: :users))
       = link_to 'All', administration_users_path
+  = render "administration/shared/shared_issue_section"
