--- a/app/views/administration/settings/shared/_side_menu.html.slim
+++ b/app/views/administration/settings/shared/_side_menu.html.slim
@@ -5,5 +5,10 @@
       | &nbsp &nbsp
       = 'User Settings'
   ul.nav.navbar-nav
-    li.active = link_to 'Edit', edit_administration_settings_user_path(@model)
+    li class=('active' if request.url.include?('users'))
+      = link_to 'Edit', edit_administration_settings_user_path(@model)
+  ul.nav.navbar-nav
+    - if UserConfigurationPolicy.new(current_user, @model).edit?
+      li class=('active' if request.url.include?('configuration'))
+        = link_to 'Coniguration', edit_administration_settings_user_configuration_path(@model)
   = render "administration/shared/shared_issue_section"
