feature(mvc): project records index and csv export
why:
- see worked hours per project
- analize data with libre office/excel

This change addresses the need by:
- Addming all classes for mvc
- add exporter classes for csv

--- a/app/views/administration/specific_project/shared/_side_menu.html.slim
+++ b/app/views/administration/specific_project/shared/_side_menu.html.slim
@@ -2,4 +2,7 @@
   ul.nav.navbar-nav
     li class=('active' if current_page?(controller: :dashboards, action: :show))
       = link_to 'Dashboard', [:administration, @project, :dashboard]
+    - if policy(Record).index?
+      li class=('active' if current_page?(controller: :records))
+        = link_to 'Records', [:administration, @project, :records]
   = render "administration/shared/shared_issue_section"
