--- a/app/concepts/administration/records/view/index.slim
+++ b/app/concepts/administration/records/view/index.slim
@@ -1,8 +1,10 @@
 .row.align-items-center
   .col-sm-6.font-weight-bold
-    | You have worked #{month_spended_time} hours this month
+    | #{month_spended_time} hours has been spended this month
   .col-sm-6
-    .pull-right = add_link
+    .pull-right.btn-group
+      = add_btn
+      = csv_btn
 br
 .autopagerize_page_element
   .table-responsive
@@ -11,15 +13,14 @@ br
         - model.each do |record_day|
           tr
             td colspan=3
-              .font-weight-bold = l(record_day.day, format: '%A %d.%m.%Y')
+              .font-weight-bold = format_day(record_day.day)
             td
               .pull-right = spended_time(record_day)
           - record_day.records.each do |record|
             tr
               td = record.description
-              td = l(record.start_time, format: "%I:%M %P")
-              td = l(record.end_time, format: "%I:%M %P")
+              td = format_time(record.start_time)
+              td = format_time(record.end_time)
               td
-                .btn-group.pull-right
-                  = edit_btn(record)
+                .btn-group.pull-right = edit_btn(record)
   = paginate model
