fix(js, view): empty comment, assigen user, user overview
why:
- assigen a user to a project was proken
- press submit on empty comments cause appear a error dialog
- user overview was incosistent

this was archived by:
- vuex: when a meta collection is created, add also a meta entry for every item
  in the meta collection
- do nothing when the comment is empty and press sumbit

--- a/app/concepts/administration/users/view/index.slim
+++ b/app/concepts/administration/users/view/index.slim
@@ -10,6 +10,4 @@
 
 ul.list-group.list-lines
   - model.each do |user|
-    li.list-group-item
-      = user
-      .pull-right = edit_btn(user)
+    li.list-group-item = link(user)
