feature(mvc): destroy user btn
why:
To allow destroy users. E.g a wrong user was created.

This was archived by:
add controller action, destroy operation and
ajust the concept view

--- a/app/views/administration/specific_user/shared/_side_menu.html.slim
+++ b/app/views/administration/specific_user/shared/_side_menu.html.slim
@@ -10,7 +10,7 @@
   ul.nav.navbar-nav
     - if UserConfigurationPolicy.new(current_user, @root_model).edit?
       li class=('active' if request.url.include?('configuration'))
-        = link_to 'Coniguration', edit_administration_user_configuration_path(@root_model)
+        = link_to 'Configuration', edit_administration_user_configuration_path(@root_model)
   ul.nav.navbar-nav
     - if policy(Record).index?
       li class=('active' if request.url.include?('records'))
