feature(api, vue): add basic calender support
Why:
- Many organizations use calenders to organize them self

This was archived by:
- Add event model
- Add api entpoint for the events
- Add vue code for a general calender

--- a/app/assets/stylesheets/administration.sass
+++ b/app/assets/stylesheets/administration.sass
@@ -6,3 +6,4 @@
 @import administration/tui_editor_contents
 @import administration/tui_editor
 @import administration/flash_messages
+@import administration/vuetify
