--- a/lib/generators/mvc_form/templates/form.rb.erb
+++ b/lib/generators/mvc_form/templates/form.rb.erb
@@ -11,7 +11,7 @@ module <%= class_name.pluralize.split("::")[0..-2].join("::") %>
         predicates(ReformPredicates)
       end
 
-      # require(:name).filled
+      # required(:name).filled
     end
   end
 end
