fix(vue, view, js): close btn, asside, date input
Why:
- Close btn on moday dialogs was not longer working
- On left asside was not shown when it was selected
- Date input shown had to much information

This was archived by;
. Adjust global js code
- Adjust asside html
- Strip date string

--- a/app/views/administration/shared/_side_menu.html.slim
+++ b/app/views/administration/shared/_side_menu.html.slim
@@ -8,7 +8,7 @@
         = link_to 'Records', administration_records_path
   - if policy(Event).index?
     ul.nav.navbar-nav
-      li class=('active' if request.url.include?('calenders'))
+      li class=('active' if request.url.include?('calender'))
         = link_to 'Calenders', administration_calender_path
   - if policy(BoardList).index?
     ul.nav.navbar-nav
