feature(api,db,vue): all day option on calender
Why:
- Sometimes is necessary so specify the time of a event
  other times it is not (or not posible)

This was archived by:
- Adjust event on database
- Adust the api
- Adjust on vue the calender

--- a/app/views/administration/shared/_side_menu.html.slim
+++ b/app/views/administration/shared/_side_menu.html.slim
@@ -9,7 +9,7 @@
   - if policy(Event).index?
     ul.nav.navbar-nav
       li class=('active' if request.url.include?('calender'))
-        = link_to 'Calenders', administration_calender_path
+        = link_to 'Calender', administration_calender_path
   - if policy(BoardList).index?
     ul.nav.navbar-nav
       li class=('active' if request.url.include?('board'))
