feature(view, vue, js): Add datetime picker, move to sql schema
Why:
- Bootsrap date time picker allow choice minutes, what the
  old datetimepicker does not (only in a predefined interval)
- Ruby dump was to limited and cause problems with the views

was archived by:
- Add boottrap date time picker as a gem
- Switch to sql dump

--- a/app/assets/stylesheets/base/globals.sass
+++ b/app/assets/stylesheets/base/globals.sass
@@ -1,7 +1,7 @@
 @import font-awesome
-@import datetimepicker
 @import select2
 @import bootstrap
+@import bootstrap-datetimepicker
 
 [v-cloak]
   display: none
