feature(view): add top asside icon/text
Why:
To see better where one is

Was archived by:
Add a section on every right asside with an icon, a text
and alink that point to the current page

--- a/app/views/administration/organization/shared/_side_menu.html.slim
+++ b/app/views/administration/organization/shared/_side_menu.html.slim
@@ -1,5 +1,7 @@
 .side-menu
   ul.nav.navbar-nav
-    li class=("active" if current_page?(controller: :organizations, action: :edit))
-      = link_to "Edit", %i[edit administration organization]
+    li = link_to %i[edit administration organization]
+      = fa_icon(:gears, class: "fa-lg")
+      | &nbsp &nbsp
+      | Admin
   = render "administration/shared/shared_issue_section"
