--- a/app/views/administration/archive/shared/_side_menu.html.slim
+++ b/app/views/administration/archive/shared/_side_menu.html.slim
@@ -1,5 +1,7 @@
 .side-menu
   ul.nav.navbar-nav
-    li class=('active' if current_page?(controller: :contents, action: :show))
-      = link_to 'Content', administration_archive_root_path
+    li = link_to administration_archive_root_path
+      = fa_icon("folder-open", class: "fa-lg")
+      | &nbsp &nbsp
+      | Archive
   = render "administration/shared/shared_issue_section"
