--- a/app/views/administration/specific_project/shared/_side_menu.html.slim
+++ b/app/views/administration/specific_project/shared/_side_menu.html.slim
@@ -1,5 +1,9 @@
 .side-menu
   ul.nav.navbar-nav
+    li = link_to [:administration, @project, :dashboard]
+      = fa_icon(:building, class: "fa-lg")
+      | &nbsp &nbsp
+      | Project
     li class=('active' if current_page?(controller: :dashboards, action: :show))
       = link_to 'Dashboard', [:administration, @project, :dashboard]
     - if policy(Record).index?
