--- a/app/views/administration/users/shared/_side_menu.html.slim
+++ b/app/views/administration/users/shared/_side_menu.html.slim
@@ -1,5 +1,7 @@
 .side-menu
   ul.nav.navbar-nav
-    li class=('active' if current_page?(controller: :users))
-      = link_to 'All', administration_users_path
+    li = link_to administration_users_path
+      = fa_icon(:users, class: "fa-lg")
+      | &nbsp &nbsp
+      | Users
   = render "administration/shared/shared_issue_section"
